@@ -103,12 +103,12 @@ public class SyncSourceBatch implements Batch {
 
   @Override
   public Optional<SignedBeaconBlock> getFirstBlock() {
-    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.get(0));
+    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.getFirst());
   }
 
   @Override
   public Optional<SignedBeaconBlock> getLastBlock() {
-    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.get(blocks.size() - 1));
+    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.getLast());
   }
 
   @Override
@@ -327,8 +327,7 @@ public class SyncSourceBatch implements Batch {
       blobSidecarsByBlockRoot.putAll(newBlobSidecarsByBlockRoot);
     }
 
-    if (newBlocks.isEmpty()
-        || newBlocks.get(newBlocks.size() - 1).getSlot().equals(getLastSlot())) {
+    if (newBlocks.isEmpty() || newBlocks.getLast().getSlot().equals(getLastSlot())) {
       complete = true;
     }
   }
@@ -361,8 +360,8 @@ public class SyncSourceBatch implements Batch {
     if (blocks.isEmpty() || newBlocks.isEmpty()) {
       return true;
     }
-    final SignedBeaconBlock previousBlock = blocks.get(blocks.size() - 1);
-    final SignedBeaconBlock firstNewBlock = newBlocks.get(0);
+    final SignedBeaconBlock previousBlock = blocks.getLast();
+    final SignedBeaconBlock firstNewBlock = newBlocks.getFirst();
     if (!firstNewBlock.getParentRoot().equals(previousBlock.getRoot())) {
       LOG.debug(
           "Marking batch invalid because new blocks do not form a chain with previous blocks");
