@@ -73,9 +73,9 @@ import tech.pegasys.teku.spec.datastructures.execution.ExecutionPayload;
 import tech.pegasys.teku.spec.datastructures.execution.PowBlock;
 import tech.pegasys.teku.spec.datastructures.forkchoice.ReadOnlyForkChoiceStrategy;
 import tech.pegasys.teku.spec.datastructures.operations.Attestation;
-import tech.pegasys.teku.spec.datastructures.operations.Attestation.AttestationSchema;
 import tech.pegasys.teku.spec.datastructures.operations.AttestationData;
-import tech.pegasys.teku.spec.datastructures.operations.IndexedAttestation.IndexedAttestationSchema;
+import tech.pegasys.teku.spec.datastructures.operations.AttestationSchema;
+import tech.pegasys.teku.spec.datastructures.operations.IndexedAttestationSchema;
 import tech.pegasys.teku.spec.datastructures.state.Checkpoint;
 import tech.pegasys.teku.spec.datastructures.util.AttestationProcessingResult;
 import tech.pegasys.teku.spec.executionlayer.ExecutionLayerChannelStub;
@@ -115,7 +115,7 @@ class ForkChoiceTest {
   private final BlobSidecarManager blobSidecarManager = mock(BlobSidecarManager.class);
   private final BlobSidecarsAvailabilityChecker blobSidecarsAvailabilityChecker =
       mock(BlobSidecarsAvailabilityChecker.class);
-  private AttestationSchema attestationSchema;
+  private AttestationSchema<?> attestationSchema;
   private StorageSystem storageSystem;
   private ChainBuilder chainBuilder;
   private SignedBlockAndState genesis;
@@ -129,7 +129,7 @@ class ForkChoiceTest {
       mock(BlockBroadcastValidator.class);
   private final MergeTransitionBlockValidator transitionBlockValidator =
       mock(MergeTransitionBlockValidator.class);
-  private DebugDataDumper debugDataDumper = mock(DebugDataDumper.class);
+  private final DebugDataDumper debugDataDumper = mock(DebugDataDumper.class);
 
   private final InlineEventThread eventThread = new InlineEventThread();
 
@@ -248,6 +248,31 @@ class ForkChoiceTest {
   }
 
   @Test
+  void onBlock_shouldFailIfBlobsAreInvalid() {
+    setupWithSpec(TestSpecFactory.createMinimalDeneb());
+    final SignedBlockAndState blockAndState = chainBuilder.generateBlockAtSlot(ONE);
+    storageSystem.chainUpdater().advanceCurrentSlotToAtLeast(blockAndState.getSlot());
+    final List<BlobSidecar> blobSidecars =
+        storageSystem
+            .chainStorage()
+            .getBlobSidecarsBySlotAndBlockRoot(blockAndState.getSlotAndBlockRoot())
+            .join();
+
+    when(blobSidecarsAvailabilityChecker.getAvailabilityCheckResult())
+        .thenReturn(
+            SafeFuture.completedFuture(
+                BlobSidecarsAndValidationResult.invalidResult(blobSidecars)));
+
+    importBlockAndAssertFailure(
+        blockAndState, FailureReason.FAILED_DATA_AVAILABILITY_CHECK_INVALID);
+
+    verify(blobSidecarManager).createAvailabilityChecker(blockAndState.getBlock());
+    verify(blobSidecarsAvailabilityChecker).initiateDataAvailabilityCheck();
+    verify(blobSidecarsAvailabilityChecker).getAvailabilityCheckResult();
+    verify(debugDataDumper).saveInvalidBlobSidecars(blobSidecars, blockAndState.getBlock());
+  }
+
+  @Test
   void onBlock_consensusValidationShouldNotResolveWhenDataAvailabilityFails() {
     setupWithSpec(TestSpecFactory.createMinimalDeneb());
     final SignedBlockAndState blockAndState = chainBuilder.generateBlockAtSlot(ONE);
@@ -288,8 +313,7 @@ class ForkChoiceTest {
   void onBlock_consensusValidationShouldNotResolveWhenEarlyFails() {
     setupWithSpec(TestSpecFactory.createMinimalDeneb());
     final List<SignedBlockAndState> signedBlockAndStates = chainBuilder.generateBlocksUpToSlot(2);
-    final SignedBlockAndState wrongBlockAndState =
-        signedBlockAndStates.get(signedBlockAndStates.size() - 1);
+    final SignedBlockAndState wrongBlockAndState = signedBlockAndStates.getLast();
 
     storageSystem.chainUpdater().advanceCurrentSlotToAtLeast(wrongBlockAndState.getSlot());
 
@@ -314,7 +338,7 @@ class ForkChoiceTest {
     importBlockAndAssertFailure(blockAndState, FailureReason.FAILED_STATE_TRANSITION);
 
     verify(debugDataDumper)
-        .saveInvalidBlockToFile(
+        .saveInvalidBlock(
             eq(blockAndState.getBlock()),
             eq(FailureReason.FAILED_STATE_TRANSITION.toString()),
             eq(Optional.of(blockException)));
@@ -334,7 +358,7 @@ class ForkChoiceTest {
     // let's prepare a mocked EL with lazy newPayload
     executionLayer = mock(ExecutionLayerChannelStub.class);
     final SafeFuture<PayloadStatus> payloadStatusSafeFuture = new SafeFuture<>();
-    when(executionLayer.engineNewPayload(any())).thenReturn(payloadStatusSafeFuture);
+    when(executionLayer.engineNewPayload(any(), any())).thenReturn(payloadStatusSafeFuture);
 
     // let's import a valid consensus block
     final SafeFuture<BlockImportResult> importResult =
@@ -349,7 +373,7 @@ class ForkChoiceTest {
     payloadStatusSafeFuture.complete(PayloadStatus.invalid(Optional.empty(), Optional.empty()));
     assertBlockImportFailure(importResult, FailureReason.FAILED_STATE_TRANSITION);
     verify(debugDataDumper)
-        .saveInvalidBlockToFile(any(), eq(FailureReason.FAILED_STATE_TRANSITION.toString()), any());
+        .saveInvalidBlock(any(), eq(FailureReason.FAILED_STATE_TRANSITION.toString()), any());
   }
 
   @Test
@@ -415,7 +439,7 @@ class ForkChoiceTest {
   @ParameterizedTest
   @MethodSource("provideArgumentsForShouldReorg")
   void onBlock_shouldReorgWhenProposerWeightingMakesForkBestChain(
-      long advanceTimeSlotMillis, boolean shouldReorg) {
+      final long advanceTimeSlotMillis, final boolean shouldReorg) {
     storageSystem.chainUpdater().setCurrentSlot(UInt64.valueOf(2));
     final Spec spec = TestSpecFactory.createMinimalBellatrix();
     forkChoice =
@@ -429,7 +453,7 @@ class ForkChoiceTest {
             new TickProcessor(spec, recentChainData),
             transitionBlockValidator,
             DEFAULT_FORK_CHOICE_LATE_BLOCK_REORG_ENABLED,
-            mock(DebugDataDumper.class),
+            DebugDataDumper.NOOP,
             metricsSystem);
 
     final UInt64 currentSlot = recentChainData.getCurrentSlot().orElseThrow();
@@ -750,7 +774,7 @@ class ForkChoiceTest {
     importBlockAndAssertFailure(
         chainBuilder.generateNextBlock(), FailureReason.FAILED_STATE_TRANSITION);
     verify(debugDataDumper)
-        .saveInvalidBlockToFile(
+        .saveInvalidBlock(
             eq(chainBuilder.getLatestBlockAndState().getBlock()),
             eq(FailureReason.FAILED_STATE_TRANSITION.toString()),
             any());
@@ -791,7 +815,7 @@ class ForkChoiceTest {
     importBlockAndAssertFailure(invalidBlock, FailureReason.FAILED_STATE_TRANSITION);
     assertThat(forkChoice.processHead(invalidBlock.getSlot())).isCompleted();
     verify(debugDataDumper)
-        .saveInvalidBlockToFile(
+        .saveInvalidBlock(
             eq(invalidBlock.getBlock()),
             eq(FailureReason.FAILED_STATE_TRANSITION.toString()),
             any());
@@ -1193,7 +1217,7 @@ class ForkChoiceTest {
     importBlock(epoch2Block);
   }
 
-  private UInt64 prepFinalizeEpoch(long epoch) {
+  private UInt64 prepFinalizeEpoch(final long epoch) {
     final ChainUpdater chainUpdater = storageSystem.chainUpdater();
     final UInt64 epochPlus2StartSlot = spec.computeStartSlotAtEpoch(UInt64.valueOf(epoch).plus(2));
 
@@ -1404,7 +1428,7 @@ class ForkChoiceTest {
   }
 
   private Answer<Void> getOnForkChoiceUpdatedResultAnswer(
-      Optional<ForkChoiceUpdatedResult> result) {
+      final Optional<ForkChoiceUpdatedResult> result) {
     return invocation -> {
       result.ifPresent(
           forkChoiceUpdatedResult ->
